29 Mar Listed Brands, Cars, Colors, Customers & Rentals

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,15 @@
+<div class="container">
+    <app-navi></app-navi>
+    <br>
+    <div class="row">
+        <div class="col-md-3">
+            <app-navi-left></app-navi-left>
+        </div>
+        <div class="col-md-9">
+            <app-car></app-car>
+            <app-rental></app-rental>
+        </div>    
+    </div>
 
-<router-outlet></router-outlet>
+    <router-outlet></router-outlet>
+</div>
