29 Mar Added Minimal Down Arrow

--- a/src/app/components/navi-left/navi-left.component.html
+++ b/src/app/components/navi-left/navi-left.component.html
@@ -1,7 +1,7 @@
 <ul class="list-group">
                 
     <li class="list-group-item" data-bs-toggle="collapse" href="#brandComponent" role="button" aria-expanded="false" aria-controls="brandComponent">
-        Brands
+        Brands &#9660;
     </li>
     <div class="collapse" id="brandComponent">
         <div class="card card-body">
@@ -10,7 +10,7 @@
     </div>
 
     <li class="list-group-item" data-bs-toggle="collapse" href="#colorComponent" role="button" aria-expanded="false" aria-controls="colorComponent">
-        Colors
+        Colors &#9660;
     </li>
     <div class="collapse" id="colorComponent">
         <div class="card card-body">
@@ -19,7 +19,7 @@
     </div>
     
     <li class="list-group-item" data-bs-toggle="collapse" href="#customerComponent" role="button" aria-expanded="false" aria-controls="customerComponent">
-        Customers
+        Customers &#9660;
     </li>
     <div class="collapse" id="customerComponent">
         <div class="card card-body">
